src/riot-rs-macros/tests/ui/main/incorrect_fn_peripheral_param.stderr
error[E0599]: no method named `take_peripherals` found for mutable reference `&mut OptionalPeripherals` in the current scope
  --> tests/ui/main/incorrect_fn_peripheral_param.rs:11:1
   |
11 | #[riot_rs::main]
   | ^^^^^^^^^^^^^^^^ method not found in `&mut OptionalPeripherals`
   |
   = note: this error originates in the attribute macro `riot_rs::main` (in Nightly builds, run with -Z macro-backtrace for more info)
